jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: data
      protocol: TCP
      port: 50000
      targetPort: 50000
