jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "301"
spec:
  tls:
  - hosts:
    - jenkins.example.com
    secretName: jenkins.example.com.ssl 
  rules:
  - host: jenkins.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 80
